[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.2", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

# ==============================================================================

[tool.black]

    line-length = 120
    target-version = ['py36','py37','py38']
    skip-string-normalization = true


[tool.check-manifest]
    ignore = [
    'PKG-INFO',
    '*.egg-info',
    '*.egg-info/*',
    'setup.cfg',
    '.hgtags',
    '.hgsigs',
    '.hgignore',
    '.gitignore',
    '.bzrignore',
    '.gitattributes',
    '.github/*',
    '.travis.yml',
    'Jenkinsfile',
    '*.mo',
    '.clang-tidy',
    '.clang-format',
    '.gitmodules',
    'requirements.txt',
    'requirements_tests.txt',
    'VERSION.txt',
    '.editorconfig',
    '*.yml',
    '*.yaml',
    'docs/*',
    'docs/images/*',
    'examples/*',
    'scripts/*',
    'toolchain/*',
    '*.rst',
    'logo.png',
    ]



[tool.coverage]
    [tool.coverage.run]
        omit = [
            '*_test.py',
            '*_fixtures.py'
        ]


[tool.pylint]
    [tool.pylint.master]
    ignore-patterns = [
        '__init__.py',
        '.*_test.py',
        '.*_fixtures.py',
        '.*flycheck.*.py',
    ]

    extension-pkg-whitelist = [
        'math',
        'cmath',
        'unicodedata',
    ]
    extension-pkg-allow-list = [
        'math',
        'cmath',
        'unicodedata',
    ]

    [tool.pylint.basic]
    good-names = ['qb', 'id', 'i', 'j', 'k', 'N', 'op', 'Zero', 'One',
                  'X', 'Y', 'Z', 'R', 'U', 'U1', 'U2', 'U3', 'C', 'CRz']

    [tool.pylint.format]
    max-line-length = 120

    [tool.pylint.reports]
    msg-template = '{path}:{line}: [{msg_id}, {obj}] {msg} ({symbol})'

    [tool.pylint.similarities]
    min-similarity-lines = 20

    [tool.pylint.messages_control]
    disable = [
         'expression-not-assigned',
         'pointless-statement',
         'no-name-in-module',  # due to dynamic importing of symbols
         'fixme'
    ]


[tool.pytest.ini_options]

minversion = '6.0'
addopts = '-pno:warnings'
testpaths = ['projectq']
norecursedirs = 'third_party'
ignore-glob = ['*flycheck*.py']
mock_use_standalone_module = true

[tool.isort]

profile = "black"

[tool.setuptools_scm]

write_to = 'VERSION.txt'
write_to_template = '{version}'
local_scheme = 'no-local-version'

[tool.yapf]

column_limit = 120
