[metadata]

name = hiq-projectq
version = file:VERSION.txt
url = https://github.com/Huawei-HiQ/ProjectQ/
author = Huawei-HiQ
author_email = hiqinfo@huawei.com
project_urls =
       Documentation = https://hiq-projectq.readthedocs.io/en/latest/
       Issue Tracker = https://github.com/Huawei-HiQ/ProjectQ/
license = Apache License Version 2.0
license_file = LICENSE
description = HiQ-ProjectQ - An open source software framework for quantum computing
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
home_page = https://github.com/Huawei-HiQ/ProjectQ/
requires_dist = setuptools
classifier =
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]

zip_safe = False
packages = find:
python_requires = >= 3
setup_requires =
  setuptools_scm[toml]
  pybind11 >= 2.6.2
install_requires =
    matplotlib >= 2.2.3
    networkx >= 2
    numpy
    requests
    scipy
    sympy

[options.extras_require]

# AWS Braket support
braket = boto3

test =
     flaky
     mock
     pytest >= 6.0
     pytest-cov
     pytest-mock

docs =
     sphinx
     sphinx_rtd_theme
     importlib-metadata>=0.9;python_version<"3.8"


# OpenQASM support
qiskit = qiskit-terra >= 0.15
qasm = qiskit-terra >= 0.15
pyparsing = pyparsing

# ==============================================================================

[flake8]

max-line-length = 120
exclude =
        .git,
        __pycache__,
        build,
        dist,
        __init__.py
docstring-quotes = """
eradicate-whitelist = # yapf: disable# yapf: enable
ignore-names = qb, ID, i, j, k, N, op, Zero, One, X, Y, Z, R, C, CRz

# ==============================================================================
